fixed the overflow behavior of the tasks menu

--- a/angular/src/app/components/footer/footer-todo-menu/footer-todo-menu.component.scss
+++ b/angular/src/app/components/footer/footer-todo-menu/footer-todo-menu.component.scss
@@ -64,6 +64,9 @@
     &-sub-div {
       text-align: center;
     }
+    &-overflow-div {
+      overflow: auto;
+    }
     &-todos {
       list-style-type: none;
       padding: 0 0 0.2rem 1rem;
